--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "nodejssampel",
-  "version": "0.0.0",
-  "description": "<Description about your application>",
-  "main": "app.js",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "data-store": "^3.1.0",
-    "express": "^4.14.0",
-    "memory-cache": "^0.2.0",
-    "mssql": "^3.3.0"
-  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "server": "nodemon --exec babel-node index.js"
   },
-  "author": {
-    "name": "Jose Carlo San Pedro",
-    "email": "josecarlosanpedro0302@gmail.com"
+  "dependencies": {
+    "@babel/polyfill": "^7.6.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "core-js": "^3.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.1.1",
+    "jsonwebtoken": "^8.4.0",
+    "mongoose": "^5.4.12"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.10"
   }
 }
