--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "query-string": "^6.8.3",
     "react": "16.8.0",
     "react-dom": "16.8.0",
+    "jsonwebtoken": "^8.5.1",
     "react-redux": "6.0.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
