--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "antd": "3.16.1",
     "axios": "0.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.11.0",
     "qs": "^6.8.0",
     "query-string": "^6.8.3",
     "react": "16.8.0",
     "react-dom": "16.8.0",
-    "jsonwebtoken": "^8.5.1",
     "react-redux": "6.0.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
