--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "antd": "3.16.1",
     "axios": "0.16.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "core-js": "^3.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mongoose": "^5.4.12",
     "node-sass": "^4.11.0",
     "qs": "^6.8.0",
     "query-string": "^6.8.3",
@@ -23,12 +35,16 @@
     "rxjs-compat": "^6.3.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.10"
   },
   "scripts": {
     "start": "concurrently \"yarn start-frontend || npm run start-frontend\" \"yarn start-backend || npm run start-backend\"",
-    "start-backend": "nodemon server/index.js",
+    "start-backend": "nodemon src/server.js",
     "start-frontend": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
